[package]
name = "pushpop"
version = "0.1.0"
authors = ["theseriousadult <jack@gallabytes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "^0.15"
regex = "^1.1.7"
mailparse = "^0.8"
# snafu = "0.4.1"
# failure = "0.1.5"
