[package]
name = "pushpop"
version = "0.1.0"
authors = ["theseriousadult <jack@gallabytes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = "^0.15"
regex = "^1.1.7"
mailparse = "^0.8"

[dev-dependencies]
mail-test-account = "0.1.1"
webpki = "0.19"
webpki-roots = "0.16"
untrusted = "0.6.2"
